syntax = "proto3";

option csharp_namespace = "DevBook.Grpc.StartupProfiles";
package startup_profiles;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "common/create_response.proto";

service StartupProfilesGrpcService {
  rpc GetAll (GetAllRequest) returns (GetAllResponse);
  rpc GetById (GetByIdRequest) returns (GetByIdResponse);
  rpc Create (CreateRequest) returns (common.CreateResponse);
  rpc Update (UpdateRequest) returns (google.protobuf.Empty);
  rpc Patch (PatchRequest) returns (google.protobuf.Empty);
  rpc Delete (DeleteRequest) returns (google.protobuf.Empty);
}

message StartupProfileDto {
  string id = 1;
  string name = 2;
  repeated string app_setup_ids = 3; 
}

message GetAllRequest {}

message GetAllResponse {
  repeated StartupProfileDto items = 1;
}

message GetByIdRequest {
  string id = 1;
}

message GetByIdResponse {
  StartupProfileDto item = 1;
}

message CreateRequest {
  string name = 1;
  repeated string app_setup_ids = 2; 
}

message UpdateRequest {
  string id = 1;
  string name = 2;
  repeated string app_setup_ids = 3; 
}

message PatchRequest {
  string id = 1;
  google.protobuf.StringValue name = 2;
  repeated string app_setup_ids = 3; 
}

message DeleteRequest {
  string id = 1;
}
