syntax = "proto3";

option csharp_namespace = "DevBook.Grpc.AppSetups";
package app_setups;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service AppSetupsGrpcService {
  rpc GetAll (GetAllRequest) returns (GetAllResponse);
  rpc GetById (GetByIdRequest) returns (GetByIdResponse);
  rpc Create (CreateRequest) returns (google.protobuf.Empty);
  rpc Update (UpdateRequest) returns (google.protobuf.Empty);
  rpc Patch (PatchRequest) returns (google.protobuf.Empty);
  rpc Delete (DeleteRequest) returns (google.protobuf.Empty);
}

message AppSetupDto {
  string id = 1;
  string name = 2;
  string path = 3;
  optional string arguments = 4; 
}

message GetAllRequest {}

message GetAllResponse {
  repeated AppSetupDto items = 1;
}

message GetByIdRequest {
  string id = 1;
}

message GetByIdResponse {
  AppSetupDto item = 1;
}

message CreateRequest {
  string name = 1;
  string path = 2;
  optional string arguments = 3; 
}

message UpdateRequest {
  string id = 1;
  string name = 2;
  string path = 3;
  optional string arguments = 4; 
}

message PatchRequest {
  string id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue path = 3;
  google.protobuf.StringValue arguments = 4; 
}

message DeleteRequest {
  string id = 1;
}
